Templates: fix alignment of header action buttons on Data Tables

--- a/themes/Default/css/main.css
+++ b/themes/Default/css/main.css
@@ -470,17 +470,17 @@ textarea[disabled] {
 }
 
 /* PAGINATION */
-div.paginationTop {
+.paginationTop {
     text-align: right;
     font-size: 12px;
     margin: 15px 0px 0px 0px;
 }
-div.paginationBottom {
+.paginationBottom {
     text-align: right;
     font-size: 12px;
     margin: 0px 0px 15px 0px;
 }
-div.linkTop {
+.linkTop {
     text-align: right;
     font-size: 12px;
     margin: 15px 0px 5px 0px;
